# AI-Systems

./: .gitignore  .gitmodules  README.md  pyproject.toml
BOOK_LLMs-from-scratch/: BPE_test.py
GPT-diagrammatize/: BagOfWords.py  DotProduct.py  NGram.py  NPLM.py  Seq2Seq.py  Word2VecSkipGram.py  Word2VecSkipGramAndCBOW.py
HandsOnAIAgent/: babyagi_demo.out  babyagi_demo.py  babyagi_round.out  babyagi_round_0.out  babyagi_round_1.out  babyagi_round_2.out  babyagi_round_3.out  babyagi_round_4.out  babyagi_round_5.out  babyagi_round_6.out  call_ark_embeddings.py  call_duckduckgo.py  call_volcengine_demo.py  camel_agent_demo.py  chapter3.py  chapter4.py  chapter5.py  chapter6.py  chapter7.py  cot_demo.py  doubao_embedding.py  functioncall_demo.py  langchain_usage.py  mcp_test.py  misc.py  react_demo.py  react_demo_1st_request.json  react_demo_1st_response.json  react_demo_2nd_request.json  react_demo_2nd_response.json  readme.md  test_react.py  test_volcengine.py
LangChain/: doubao_embeddings.py  memory_vectorstore.py  rag_1.py  rag_1_with_search_metadata.py  tutorials_llm_chain.py  tutorials_retrievers.py  util.py
PYTorch-NLP/: book_4_7.py  sample.py  spacy_sample.py  test.py  torch_sample.py  transformers_sample.py
deep-learning-from-scratch/dataset/: mnist.py
google_adk/: adk_instructions.py  adk_utils.py
google_adk/a2a_basic/: __init__.py  agent.py
google_adk/a2a_root/: agent.py
google_adk/agent_using_fs_mcp_server/: .env  agent.py  agent_main_without_adk_web.py  my_adk_mcp_server.py  my_adk_mcp_server_by_fastmcp.py  my_adk_mcp_server_by_mcp.py
google_adk/github_mcp_agent/: agent.py
google_adk/hitl_agent/: agent.py
google_adk/loop_agent/: agent.py
google_adk/multi_tool_agent/: agent.py
google_adk/my_agent/: agent.py  context_compression_example.py  dump_mysql_used_by_session_service.py  memory_example.py  reset_mysql.sh  (+3 more)
memory/: langchain_memory_test.py  llama_memory.py  mem0_test.py  memgpt_test.py  volcengine_mem0_test.py
misc/: autogen_guess_item.py  camel_guess_item.py  langchain_chain.py  langchain_usage.py  read_paper_react.py  util.py
playground/: pubsub_example.py
py3-test/: rank_bm25_test.py
py3_journey/: generate_pdf.py  var_ref_test.py  zip_test.py
utils/: calc_vector_distance.py  doubao_embedding.py  doubao_embeddings.py  doubao_embeddings_lc.py  tiktoken_test.py
(+69 files in other folders)
